complete login, signup, verify api

--- a/src/resource/htmlEmailTemplate/verifyEmail.html
+++ b/src/resource/htmlEmailTemplate/verifyEmail.html
@@ -56,7 +56,7 @@
                                 >
                                     <img
                                         width="100"
-                                        src="cid:logo"
+                                        src="{{logoUrl}}"
                                         style="border-radius: 100px"
                                     />
                                 </a>
@@ -120,10 +120,9 @@
                                                 "
                                             >
                                                 Please verify your email address
-                                                for daily.dev. If you didn't
-                                                make a request / update to your
-                                                account please ignore this
-                                                email.
+                                                for Sildey. If you didn't make a
+                                                request / update to your account
+                                                please ignore this email.
                                             </p>
                                             <a
                                                 href="{{verifyUrl}}"
