--- a/src/resource/htmlEmailTemplate/resetPassword.html
+++ b/src/resource/htmlEmailTemplate/resetPassword.html
@@ -2,7 +2,7 @@
 <html lang="vi">
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-        <title>Reset password</title>
+        <title>Đặt lại mật khẩu</title>
         <meta name="description" content="Reset Password Email Template." />
         <style type="text/css">
             a:hover {
@@ -99,7 +99,7 @@
                                                     font-size: 32px;
                                                 "
                                             >
-                                                Reset password
+                                                Đặt lại mật khẩu
                                             </h1>
                                             <span
                                                 style="
@@ -119,11 +119,12 @@
                                                     margin: 0;
                                                 "
                                             >
-                                                Please click the link bellow to
-                                                reset your password . If you
-                                                didn't make a request / update
-                                                to your account please ignore
-                                                this email.
+                                                Vui lòng nhấp vào liên kết bên
+                                                dưới để đặt lại mật khẩu của
+                                                bạn. Nếu bạn không thực hiện yêu
+                                                cầu/cập nhật nào đối với tài
+                                                khoản của bạn, vui lòng bỏ qua
+                                                email này.
                                             </p>
                                             <a
                                                 href="{{verifyUrl}}"
@@ -139,7 +140,7 @@
                                                     display: inline-block;
                                                     border-radius: 10px;
                                                 "
-                                                >Reset Password</a
+                                                >Đặt lại mật khẩu</a
                                             >
                                         </td>
                                     </tr>
