--- a/src/resource/htmlEmailTemplate/verifyEmail.html
+++ b/src/resource/htmlEmailTemplate/verifyEmail.html
@@ -2,7 +2,7 @@
 <html lang="vi">
     <head>
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-        <title>Verify email</title>
+        <title>Xác thực email</title>
         <meta name="description" content="Reset Password Email Template." />
         <style type="text/css">
             a:hover {
@@ -99,7 +99,7 @@
                                                     font-size: 32px;
                                                 "
                                             >
-                                                Verify your email address
+                                                Xác thực tài khoản
                                             </h1>
                                             <span
                                                 style="
@@ -119,10 +119,11 @@
                                                     margin: 0;
                                                 "
                                             >
-                                                Please verify your email address
-                                                for Sildey. If you didn't make a
-                                                request / update to your account
-                                                please ignore this email.
+                                                Vui lòng xác minh địa chỉ email
+                                                của bạn cho Sildey. Nếu bạn
+                                                không thực hiện yêu cầu/cập nhật
+                                                nào đối với tài khoản của bạn,
+                                                vui lòng bỏ qua email này.
                                             </p>
                                             <a
                                                 href="{{verifyUrl}}"
@@ -138,7 +139,7 @@
                                                     display: inline-block;
                                                     border-radius: 10px;
                                                 "
-                                                >Verify email</a
+                                                >Xác thực</a
                                             >
                                         </td>
                                     </tr>
