--- a/src/resource/htmlEmailTemplate/resetPassword.html
+++ b/src/resource/htmlEmailTemplate/resetPassword.html
@@ -50,10 +50,7 @@
                         </tr>
                         <tr>
                             <td style="text-align: center">
-                                <a
-                                    href="https://ticketplus.tech"
-                                    target="_blank"
-                                >
+                                <a href="{{appHomePage}}" target="_blank">
                                     <img
                                         width="100"
                                         src="{{logoUrl}}"
