--- a/src/resource/htmlEmailTemplate/resetPassword.html
+++ b/src/resource/htmlEmailTemplate/resetPassword.html
@@ -16,29 +16,13 @@
         </style>
     </head>
 
-    <body
-        marginheight="0"
-        topmargin="0"
-        marginwidth="0"
-        style="margin: 0px; background-color: #f2f3f8"
-        leftmargin="0"
-    >
+    <body marginheight="0" topmargin="0" marginwidth="0" style="margin: 0px; background-color: #f2f3f8" leftmargin="0">
         <!--100% body table-->
-        <table
-            cellspacing="0"
-            border="0"
-            cellpadding="0"
-            width="100%"
-            bgcolor="#f2f3f8"
-        >
+        <table cellspacing="0" border="0" cellpadding="0" width="100%" bgcolor="#f2f3f8">
             <tr>
                 <td>
                     <table
-                        style="
-                            background-color: #f2f3f8;
-                            max-width: 670px;
-                            margin: 0 auto;
-                        "
+                        style="background-color: #f2f3f8; max-width: 670px; margin: 0 auto"
                         width="100%"
                         border="0"
                         align="center"
@@ -51,11 +35,7 @@
                         <tr>
                             <td style="text-align: center">
                                 <a href="{{appHomePage}}" target="_blank">
-                                    <img
-                                        width="100"
-                                        src="{{logoUrl}}"
-                                        style="border-radius: 100px"
-                                    />
+                                    <img width="100" src="{{logoUrl}}" style="border-radius: 100px" />
                                 </a>
                             </td>
                         </tr>
@@ -75,12 +55,9 @@
                                         background: #fff;
                                         border-radius: 3px;
                                         text-align: center;
-                                        -webkit-box-shadow: 0 6px 18px 0
-                                            rgba(0, 0, 0, 0.06);
-                                        -moz-box-shadow: 0 6px 18px 0
-                                            rgba(0, 0, 0, 0.06);
-                                        box-shadow: 0 6px 18px 0
-                                            rgba(0, 0, 0, 0.06);
+                                        -webkit-box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
+                                        -moz-box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
+                                        box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.06);
                                     "
                                 >
                                     <tr>
@@ -88,14 +65,7 @@
                                     </tr>
                                     <tr>
                                         <td style="padding: 0 35px">
-                                            <h1
-                                                style="
-                                                    color: #1e1e2d;
-                                                    font-weight: 600;
-                                                    margin: 0;
-                                                    font-size: 32px;
-                                                "
-                                            >
+                                            <h1 style="color: #1e1e2d; font-weight: 600; margin: 0; font-size: 32px">
                                                 Đặt lại mật khẩu
                                             </h1>
                                             <span
@@ -103,25 +73,14 @@
                                                     display: inline-block;
                                                     vertical-align: middle;
                                                     margin: 29px 0 26px;
-                                                    border-bottom: 1px solid
-                                                        #cecece;
+                                                    border-bottom: 1px solid #cecece;
                                                     width: 100px;
                                                 "
                                             ></span>
-                                            <p
-                                                style="
-                                                    color: #455056;
-                                                    font-size: 15px;
-                                                    line-height: 24px;
-                                                    margin: 0;
-                                                "
-                                            >
-                                                Vui lòng nhấp vào liên kết bên
-                                                dưới để đặt lại mật khẩu của
-                                                bạn. Nếu bạn không thực hiện yêu
-                                                cầu/cập nhật nào đối với tài
-                                                khoản của bạn, vui lòng bỏ qua
-                                                email này.
+                                            <p style="color: #455056; font-size: 15px; line-height: 24px; margin: 0">
+                                                Vui lòng nhấp vào liên kết bên dưới để đặt lại mật khẩu của bạn. Nếu bạn
+                                                không thực hiện yêu cầu/cập nhật nào đối với tài khoản của bạn, vui lòng
+                                                bỏ qua email này.
                                             </p>
                                             <a
                                                 href="{{verifyUrl}}"
@@ -156,12 +115,7 @@
                                 <p
                                     style="
                                         font-size: 14px;
-                                        color: rgba(
-                                            69,
-                                            80,
-                                            86,
-                                            0.7411764705882353
-                                        );
+                                        color: rgba(69, 80, 86, 0.7411764705882353);
                                         line-height: 18px;
                                         margin: 0 0 0;
                                     "
