--- a/src/resource/htmlEmailTemplate/collabInvitation.html
+++ b/src/resource/htmlEmailTemplate/collabInvitation.html
@@ -13,6 +13,10 @@
             th {
                 font-family: sans-serif;
             }
+            img {
+                height: auto;
+                object-fit: cover;
+            }
         </style>
     </head>
 
