--- a/src/resource/htmlEmailTemplate/collabInvitation.html
+++ b/src/resource/htmlEmailTemplate/collabInvitation.html
@@ -70,7 +70,7 @@
                                     <tr>
                                         <td style="padding: 0 35px">
                                             <h1 style="color: #1e1e2d; font-weight: 600; margin: 0; font-size: 32px">
-                                                Lời mời tham gia cộng tác chỉnh sửa bản trình chiếu
+                                                Lời mời tham gia cộng tác chỉnh sửa bài trình chiếu
                                             </h1>
                                             <span
                                                 style="
@@ -82,7 +82,7 @@
                                                 "
                                             ></span>
                                             <p style="color: #455056; font-size: 15px; line-height: 24px; margin: 0">
-                                                {{sender}} đã gửi lời mời tham gia chỉnh sửa bản trình chiếu
+                                                {{sender}} đã gửi lời mời tham gia chỉnh sửa bài trình chiếu
                                                 {{presentationName}} cho bạn.
                                             </p>
                                             <a
